# industrial_margin_engine

./: README.md  demo_flow.py  pyproject.toml  run_demo.py
configs/: trigger_policy.example.yaml
docs/: 01_architecture.md  02_event_trigger_matrix.md  03_pricing_cache_design.md  04_rollout_plan.md
schemas/: domain_event.example.json  recalc_task.example.json
src/margin_engine/: __init__.py  algorithms.py  domain.py  orchestrator.py  policies.py  pricing.py  runtime.py  server.py  store.py  utils.py
